fix padding missing when first content was a collapse

--- a/otoroshi/javascript/src/style/components/_btn.scss
+++ b/otoroshi/javascript/src/style/components/_btn.scss
@@ -12,7 +12,7 @@
   padding-bottom: 16px;
 }
 
-.btnsService+.form-group {
+.btnsService+div{
   padding-top: 50px;
 }
 
